BUG: overflow scroll in center skills card

--- a/src/components/skills/skills.scss
+++ b/src/components/skills/skills.scss
@@ -57,6 +57,7 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        overflow: hidden;
 
         @include mobile {
           flex-direction: row;
@@ -103,6 +104,7 @@
         align-items: center;
         flex-direction: column;
         justify-content: center;
+        overflow: hidden;
 
         h4 {
           color: rgb(121, 115, 115);
